src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Campaign_Count__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Campaign Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cid__c</fullName>
        <description>Salesforce campaign ID. This field is used to dynamically assign contacts to the correct Salesforce campaign based on a UTM value in the URL that is captured by HubSpot and passed to this field.</description>
        <inlineHelpText>Salesforce campaign ID</inlineHelpText>
        <label>Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Touch_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Touch Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>First Touch Contacts</relationshipLabel>
        <relationshipName>First_Touch_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Touch Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Contacts (Last Touch Campaign)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>