src/objects/Contact/fields/Active_Contact_14_days__c.field-meta.xml
<CustomField>
    <fullName>Active_Contact_14_days__c</fullName>
    <formula>IF( TODAY() -  LastActivityDate &lt;=14,1,0)</formula>
    <label>Active Contact (14 days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>