src/objects/Contact/fields/Active_Customer__c.field-meta.xml
<CustomField>
    <fullName>Active_Customer__c</fullName>
    <formula>CASE( Account.Status__c,&quot;Customer - Active&quot;,1,0)=1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Customer</label>
    <type>Checkbox</type>
</CustomField>