src/objects/Contact/fields/BDR_Notes__c.field-meta.xml
<CustomField>
    <fullName>BDR_Notes__c</fullName>
    <label>BDR Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>