src/objects/Contact/fields/Cadence_Status__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Status__c</fullName>
    <formula>IF( Most_Recent_Cadence_Next_Due_Date__c  - TODAY() &gt;=0, IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green Light&quot;,15,15), 
IF(AND(Most_Recent_Cadence_Next_Due_Date__c - TODAY() &gt;= -7, Most_Recent_Cadence_Next_Due_Date__c - TODAY()&lt;0),IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Orange Light&quot;,15,15), 
IF(Most_Recent_Cadence_Next_Due_Date__c  - TODAY() &lt;=-7, IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red Light&quot;,15,15),&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cadence Status</label>
    <type>Text</type>
</CustomField>