src/objects/Contact/fields/Direct_Line__c.field-meta.xml
<CustomField>
    <fullName>Direct_Line__c</fullName>
    <label>Direct Line</label>
    <type>Phone</type>
</CustomField>