src/objects/Contact/fields/hs_analytics_source_data_2__c.field-meta.xml
<CustomField>
    <fullName>hs_analytics_source_data_2__c</fullName>
    <label>Original source drill-down 2</label>
    <length>155</length>
    <type>Text</type>
</CustomField>