src/objects/Contact/fields/IsMQL__c.field-meta.xml
<CustomField>
    <fullName>IsMQL__c</fullName>
    <formula>NOT(  
  ISBLANK( MQL_Date__c )
)</formula>
    <label>IsMQL</label>
    <type>Checkbox</type>
</CustomField>