src/objects/Contact/fields/IsQualified__c.field-meta.xml
<CustomField>
    <fullName>IsQualified__c</fullName>
    <formula>NOT(  
  ISBLANK(  Qualified_Date__c  )
)</formula>
    <label>IsQualified</label>
    <type>Checkbox</type>
</CustomField>