src/objects/Contact/fields/Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Function__c</fullName>
    <label>Job Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IT Staff</fullName>
            </value>
            <value>
                <fullName>Officer Manager</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Owner / Operator</fullName>
            </value>
            <value>
                <fullName>Technician</fullName>
            </value>
            <value>
                <fullName>Vice President / COO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>