src/objects/Contact/fields/Last_Connect_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Connect_Date__c</fullName>
    <label>Last Connect Date</label>
    <type>Date</type>
</CustomField>