src/objects/Contact/fields/Most_Recent_Cadence_Name__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Cadence_Name__c</fullName>
    <label>Most Recent Cadence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>