src/objects/Contact/fields/Most_Recent_Cadence_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Cadence_Next_Step__c</fullName>
    <label>Most Recent Cadence - Next Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>