src/objects/Contact/fields/Number_of_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>