src/objects/Contact/fields/Number_of_Customers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Customers__c</fullName>
    <formula>Account.Number_of_Customers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Customers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>