src/objects/Contact/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <formula>Account.Number_of_Locations__c</formula>
    <label># of Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>