src/objects/Contact/fields/Number_of_Services_Mo__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Services_Mo__c</fullName>
    <formula>Account.of_Services_Mo__c</formula>
    <label># of Services/Mo.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>