src/objects/Contact/fields/Number_of_Technicians__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Technicians__c</fullName>
    <formula>Account.of_Technicians__c</formula>
    <label># of Technicians</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>