src/objects/Contact/fields/scanbizcards__SBCCity__c.field-meta.xml
<CustomField>
    <fullName>scanbizcards__SBCCity__c</fullName>
    <label>SBCCity</label>
    <length>25</length>
    <type>Text</type>
</CustomField>