src/objects/Contact/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <label>utm_campaign</label>
    <length>155</length>
    <type>Text</type>
</CustomField>