src/objects/Contact/fields/utm_term__c.field-meta.xml
<CustomField>
    <fullName>utm_term__c</fullName>
    <label>utm_term</label>
    <length>155</length>
    <type>Text</type>
</CustomField>