src/objects/Contact/fields/Working_Date__c.field-meta.xml
<CustomField>
    <fullName>Working_Date__c</fullName>
    <label>Working Date</label>
    <type>Date</type>
</CustomField>