src/objects/Contact/listViews/PW2018_All_Contacts.listView-meta.xml
<ListView>
    <fullName>PW2018_All_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Last_Attempt_Date__c</columns>
    <columns>Last_Connect_Date__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Most_Recent_Cadence_Next_Due_Date__c</columns>
    <columns>Most_Recent_Cadence_Name__c</columns>
    <columns>Time_Zone__c</columns>
    <filterScope>Everything</filterScope>
    <label>PestWorld 2018 - All Contacts</label>
</ListView>