src/objects/Contact/listViews/Salesloft_Cadence_Due_Today.listView-meta.xml
<ListView>
    <fullName>Salesloft_Cadence_Due_Today</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Last_Attempt_Date__c</columns>
    <columns>Last_Connect_Date__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Most_Recent_Cadence_Next_Due_Date__c</columns>
    <columns>Most_Recent_Cadence_Name__c</columns>
    <columns>Time_Zone__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Most_Recent_Cadence_Next_Due_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Salesloft: Cadence Due Today</label>
</ListView>